--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ Django==3.1.7
 django-filter==2.4.0
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
+Faker==7.0.1
 filelock==3.0.12
+gunicorn==20.1.0
 ipdb==0.13.7
 ipython==7.22.0
 ipython-genutils==0.2.0
@@ -39,5 +41,6 @@ traitlets==5.0.5
 virtualenv==20.4.2
 wcwidth==0.2.5
 wheel==0.36.2
+whitenoise==5.2.0
 wincertstore==0.2
 wrapt==1.12.1
